added seasons model / added rest-client gem to gemfile / added season-specific indices to beers controller

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -14,7 +14,7 @@
   </thead>
 
   <tbody>
-    <% @beers.each do |beer| %>
+    <% @winter_beers.each do |beer| %>
       <tr>
         <td><%= beer.name %></td>
         <td><%= beer.fullname %></td>
