--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Beers</h1>
+<h1>Season's Greetings</h1>
 
 <table>
   <thead>
@@ -9,23 +9,20 @@
       <th>Fullname</th>
       <th>Description</th>
       <th>Season</th>
-      <th colspan="3"></th>
+      <th colspan="8"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @winter_beers.each do |beer| %>
+    <% @beers.each do |beer| %>
       <tr>
         <td><%= beer.name %></td>
         <td><%= beer.fullname %></td>
         <td><%= beer.description %></td>
         <td><%= beer.season %></td>
-        <td><%= link_to 'Show', beer %></td>
-        <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
-        <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
+  </tbody>  
 </table>
 
 <br>
