--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -1,29 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Seasons</h1>
+<h1>Seasons Greetings!</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Year</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<head>
+  <% @seasons.each do |season| %>
+    <th colspan="3"><%= season.name %></th>
+  <% end %>
+</head>
 
-  <tbody>
-    <% @seasons.each do |season| %>
-      <tr>
-        <td><%= season.name %></td>
-        <td><%= season.year %></td>
-        <td><%= link_to 'Show', season %></td>
-        <td><%= link_to 'Edit', edit_season_path(season) %></td>
-        <td><%= link_to 'Destroy', season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @seasons.each do |season| %>
+  <% season.name %>
+  <%= season.beers.each do |beer| %>
+    <% beer.name %>
+  <% end %>
+<% end %>
 
 <br>
-
-<%= link_to 'New Season', new_season_path %>
